--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["chery", "etawah", "promoise"]
+  "cSpell.words": [
+    "adsfghsdfgjhj",
+    "byclass",
+    "byid",
+    "chery",
+    "etawah",
+    "keypresses",
+    "promoise",
+    "secondcontainer"
+  ]
 }
