--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "figlet": "^1.9.4",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security"
   }
 }
