--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "figlet": "^1.9.4",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "mongoose": "^9.0.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11"
   }
 }
